tests/error/type_errors/fun_ty_mismatch_2.err
Error: Type mismatch (at $FILE:11:15)
   | 
 9 |         return f()
10 | 
11 |     return bar(foo)
   |                ^^^ Expected argument of type `() -> int`, got `int -> int`

Guppy compilation failed due to 1 previous error
